--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="overview">
               <i class="uil uil-file-search-alt overview_icon"></i>
               <h3>Sectors Involved</h3>
-              <div>2 Domains Covered</div>
+              <div>3 Domains Covered</div>
             </div>
             <div class="overview">
               <i class="uil uil-laptop overview_icon"></i>
@@ -520,8 +520,8 @@
                 >
                   <div class="accordion-body">
                     <p>                 
-                      UMHackathon 2025 preliminary round will be carried out from 10 April 2025 (Thursday) to 12 April 2025 (Saturday). 
-                      The final round of UMHackathon2025 will be held from 19th April 2025 (Saturday) to 20th April 2025 (Sunday).
+                      UMHackathon 2025 preliminary round will be carried out from 7 April 2025 (Thursday) to 12 April 2025 (Saturday). 
+                      The final round of UMHackathon2025 will be held from 15th April 2025 (Saturday) to 20th April 2025 (Sunday).
                     </p>
                   </div>
                 </div>
@@ -587,8 +587,8 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      No, registration for the UMHackathon 2025 is completely free! There are no fees required to participate. 
-                      Simply sign up and join the event. But it’s on a first come first serve basis! 
+                      Yes, each team for UMHackathon 2025 would have to pay a commitment fee of RM25, which will be duly 
+                      refunded after the team has submitted their prototype and attended the pitching session for the preliminary round. 
                     </p>
                   </div>
                 </div>
@@ -620,10 +620,8 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      Team registration form will open from 17th March 2025 12.00 pm until 31st March 2025 11.59 pm (GMT +8).
-                      However, the registration is on a
-                      first-come,first-served basis and will be closed once 90
-                      teams have registered.
+                      The registration form will open from 20th February 2025 at 12:00:00 pm until 5th April 2025 at 11:59:59 pm (GMT +8).
+                    
                     </p>
                   </div>
                 </div>
@@ -688,8 +686,9 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      Each team will need to elect a team leader and fill up the UMHackathon 2025 Team Registration Form. 
-                      A formal acceptance notice will be sent to the team leader via email upon valid team registration. 
+                      Each team will elect a leader and fill in the UMHackathon 2025 Team Registration Form. 
+                      A formal acceptance notice will be sent to the team leader via email upon valid team registration.
+
                     </p>
                   </div>
                 </div>
@@ -710,7 +709,8 @@
                     aria-expanded="false"
                     aria-controls="question-7"
                   >
-                    How and where will UMHackathon 2025 be conducted?
+                  
+                  Can I change my team members after registration?
                   </button>
                 </h2>
                 <div
@@ -721,8 +721,7 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      UMHackathon 2025 will be conducted online during preliminary round (10-12 April) and physically
-                      during final round (19-20 April) at KPS
+                      You are not allowed to change your team members once the registration is made.
                     </p>
                   </div>
                 </div>
@@ -756,9 +755,13 @@
                   <div class="accordion-body">
                     <p>
 
-                      The UMHackathon 2025 will be divided into two rounds, the preliminary round and the final round.                      
-                      Key events such as the opening ceremony, workshops, final pitching and closing ceremony will take place over these two days. 
-                      All the participants are required to attend the UMHackathon from 19th April 2025 (Saturday) to 20th April 2025 (Sunday) otherwise that particular team will be considered as disqualified. 
+                      The UMHackathon 2025 will be divided into two rounds, the preliminary round and the final round. The problem statement for the preliminary round will be released on 7th April 2025 (Monday) at 8:00:00 pm.
+                      An online meeting will be held to explain the domain and how each team is assigned to their domain and problem statement. All teams may start to build their prototype once they receive their problem statement.
+                      The preliminary round will be carried out from 8th April 2025 (Tuesday) until 12th April 2025 at 11:59:59 pm. 
+
+                      <br><br> Final round of UMHackathon 2025 will be held from 15th April 2025 (Tuesday) to 20th April 2025 (Sunday). Key events such as the opening ceremony, workshops, final pitching, and closing ceremony will take place over these six days.
+                      The final round runs from 15th April to 20th April, with the last two days, 19th and 20th April, taking place physically at Auditorium Kompleks Perdana Siswa (KPS), Universiti Malaya.
+
                     </p>
                   </div>
                 </div>
