--- a/index.html
+++ b/index.html
@@ -742,8 +742,7 @@
                     aria-expanded="false"
                     aria-controls="question-8"
                   >
-                    How many competing rounds are there and what will we need to
-                    do?
+                    What is the mode of execution for UMHackathon 2025?
                   </button>
                 </h2>
                 <div
