--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <!-- Icons,stylesheet and fonts -->
-    <link rel="icon" href="C:\Users\anuar\Documents\UMHACKATHON2025\UMHackathon-Website.io\assets\images\umh25-logo.png" type="image/svg" />
+    <link rel="icon" href="C:\Users\anuar\Documents\UMHACKATHON2025\UMHackathon-Website.io\assets\images\umh25-logo.png" type="image/png" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
