--- a/index.html
+++ b/index.html
@@ -465,7 +465,11 @@
         =================== -->
     <section class="count_down">
       <div class="count_down_timer_container">
-        <h2 class="countdown_text">CountDown to UMHackathon 2025</h2>
+        <div class="section-title mb-5">
+            <h2 class="fs-1 fw-bold text-light">
+              CountDown to UMHackathon 2025
+            </h2>
+          </div>
         <div class="count_down_timer">
           <div class="circle" style="--clr: #90B3E7">
             <div class="dots day_dot"></div>
