--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="prizepool_section">
           <div class="prizepool mt-5 text-center fs-1 fw-bold">PRIZE POOL</div>
           <div class="prizepool section_subtitle">
-            Up to <span>RM 20K</span> for both domains!
+            Up to <span>RM 20K</span> for all domains!
           </div>
           <div class="prizepool_container" id="prizepool_container">
             <div class="prizepool_award second" id="gold">
