--- a/index.html
+++ b/index.html
@@ -293,16 +293,16 @@
         </div>
       </div>
       <div class="svg-background">
-        <img src="/assets/images/bgmid2.svg" alt="SVG Background" />
+        <img src="./assets/images/bgmid2.svg" alt="SVG Background" />
       </div>   
       <div class="svg-background2">
-        <img src="/assets/images/bgmid.svg" alt="SVG Background2" />
+        <img src="./assets/images/bgmid.svg" alt="SVG Background2" />
       </div>   
       <div class="svg-rbackground1">
-        <img src="/assets/images/bgmid.svg" alt="SVG rBackground1" />
+        <img src="./assets/images/bgmid.svg" alt="SVG rBackground1" />
       </div>   
       <div class="svg-rbackground2">
-        <img src="/assets/images/leftstar.svg" alt="SVG rBackground2" />
+        <img src="./assets/images/leftstar.svg" alt="SVG rBackground2" />
       </div>   
     </section>
 
