Little Changes to Timeline

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           <div class="line_section">
             <div class="content content1">
               <div class="content_title">
-                <h2>17th February 2025</h2>
+                <h2>20th February 2025</h2>
                 <div class="bead bead_start"></div>
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
@@ -338,7 +338,7 @@
           <div class="line_section">
             <div class="content content2">
               <div class="content_title">
-                <h2>7th April 2025</h2>
+                <h2>5th April 2025</h2>
                 <div class="bead bead_start"></div>
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
@@ -350,31 +350,43 @@
           <div class="line_section">
             <div class="content content3">
               <div class="content_title">
-                <h2>9th April 2025</h2>
+                <h2>6th April 2025</h2>
                 <div class="bead bead_start"></div>
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <p>Talk : Introduction to UMHackathon</p>
+              <p>Industrial Talk</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="content content4">
               <div class="content_title">
-                <h2>10th April 2025</h2>
+                <h2>7th April 2025</h2>
                 <div class="bead bead_start"></div>
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <p>Preliminary Round Begin</p>
+              <p>Domain Reveal Session</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="content content5">
               <div class="content_title">
-                <h2>13th April 2025</h2>
+                <h2>8th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
+              <p>Preliminary Round Start</p>
+            </div>
+          </div>
+
+          <div class="line_section">
+            <div class="content content6">
+              <div class="content_title">
+                <h2>12th April 2025</h2>
                 <div class="bead bead_start"></div>
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
@@ -384,18 +396,54 @@
           </div>
 
           <div class="line_section">
-            <div class="content content6">
+            <div class="content content7">
               <div class="content_title">
-                <h2>17th April 2025</h2>
+                <h2>13th April 2025</h2>
                 <div class="bead bead_start"></div>
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <p>Advanced Sharing Session</p>
+              <p>Judging Start</p>
             </div>
           </div>
 
           <div class="line_section">
+            <div class="content content8">
+              <div class="content_title">
+                <h2>14th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
+              <p>Judging End</p>
+            </div>
+          </div>
+
+          <div class="line_section">
+            <div class="content content9">
+              <div class="content_title">
+                <h2>15th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
+              <p>Final Round Start</p>
+            </div>
+          </div>
+
+          <div class="line_section">
+            <div class="content content10">
+              <div class="content_title">
+                <h2>20th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
+              <p>Final Round End</p>
+            </div>
+          </div>
+
+          <!-- <div class="line_section">
             <div class="long_content content7">
               <div class="content_title">
                 <h2>19th April 2025</h2>
@@ -408,9 +456,9 @@
               <p>Booth Exhibition</p>
               <p>Workshop</p>
             </div>
-          </div>
+          </div> -->
 
-          <div class="line_section">
+          <!-- <div class="line_section">
             <div class="long_content content8">
               <div class="content_title">
                 <h2>20th April 2025</h2>
@@ -421,7 +469,7 @@
               <p>Final Pitching</p>
               <p>Closing Ceremony</p>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
