--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
     <section id="home">
       <div class="container-xl container-lg container-fluid pt-lg-5 pt-md-5">
         <div class="row align-items-center py-5">
-          <div class="col-lg-8 col-md-8 col-sm-7 px-sm-4 px-4">
+          <div class="col-lg-6 col-md-6 col-sm-12 px-sm-4 px-4 d-flex flex-column tagline-container">
             <div class="tagline" data-aos-delay="1500" data-aos="fade-right" data-aos-once="true">
-              <h1 class="gradient-background">A BIGGER STAGE</h1>
-              <h1 class="gradient-background">FOR BIGGER IDEA</h1>
+              <h1 class="gradient-background">A BIGGER</h1>
+              <h1 class="gradient-background">STAGE</h1>
+              <h1 class="gradient-background">FOR BIGGER</h1>
+              <h1 class="gradient-background">IDEA</h1>
             </div>
-            <div>
-              <div class="join-now-button" data-aos-offset="50" data-aos-delay="1500" data-aos="fade-right" data-aos-once="true">
-                <a
-                  class="btn btn-danger btn-lg rounded-pill button_join my-3"
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSe3GLOuGrOhyTDErtevwkVevxYRh0PQSzzk1zVnu2B5p0wUfw/viewform"
-                  target="_self"
-                  >Join Now!  <img src="./assets/images/bulb.svg" alt="Bulb Icon" width="30" height="30" />
-                </a>
-              </div>
+            <div class="join-now-button" data-aos-offset="50" data-aos-delay="1500" data-aos="fade-right" data-aos-once="true">
+              <a
+                class="btn btn-danger btn-lg button_join my-3"
+                href="https://docs.google.com/forms/d/e/1FAIpQLSe3GLOuGrOhyTDErtevwkVevxYRh0PQSzzk1zVnu2B5p0wUfw/viewform"
+                target="_self"
+                >Join Now!  <img src="./assets/images/bulb.svg" alt="Bulb Icon"/>
+              </a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-5 text-center">
+          <div class="col-lg-5 col-md-5 col-sm-12 text-end">
             <div
-              class="floting-robot pb-5 d-none d-sm-flex flex-column align-items-center gap-5"
+              class="floating-robot pb-5 d-none d-sm-flex flex-column align-items-center gap-5"
               data-aos-delay="1500"
               data-aos="fade"
               data-aos-easing="ease-in-sine"
