update overview section

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
 
         <div class="prizepool_section">
-          <div class="prizepool mt-5 text-center fs-1 fw-bold">PRIZE POOL</div>
+          <div class="prizepool section_title mt-5 text-center fs-1 fw-bold">PRIZE POOL</div>
           <div class="prizepool section_subtitle">
             Up to <span>RM 20K</span> for all domains!
           </div>
@@ -270,7 +270,11 @@
         </div>
 
         <div class="milestone_title">
-          <div>What <span class="white-text">We</span> <span>Achieved</span></div>
+          <div class="mt-5 text-center fs-1 fw-bold">
+            <span style="color: #405fbd;">What</span> 
+            <span class="white-text" style="color: white;">We</span> 
+            <span style="color: ff3131;">Achieved</span>
+          </div>
         </div>
         <div class="milestone_container container">
           <div class="wrappers">
