--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="join-now-button" data-aos-offset="50" data-aos-delay="1500" data-aos="fade-right" data-aos-once="true">
               <a
-                class="btn btn-danger btn-lg button_join my-3"
+                class="btn button_join btn-dangerA btn-lg  my-3"
                 href="https://docs.google.com/forms/d/e/1FAIpQLSe3GLOuGrOhyTDErtevwkVevxYRh0PQSzzk1zVnu2B5p0wUfw/viewform"
                 target="_self"
                 >Join Now!  <img src="./assets/images/bulb.svg" alt="Bulb Icon"/>
