new commit (update bg for overview)

--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
 
         <div class="milestone_title">
           <div class="mt-5 text-center fs-1 fw-bold">
-            <span style="color: #405fbd;">What</span> 
-            <span class="white-text" style="color: white;">We</span> 
-            <span style="color: ff3131;">Achieved</span>
+            <span style="color: #ffffff;">WHAT</span> 
+            <span class="white-text" style="color: white;">WE</span> 
+            <span style="color: #ffffff;">ACHIEVED</span>
           </div>
         </div>
         <div class="milestone_container container">
@@ -305,9 +305,7 @@
       <div class="svg-rbackground1">
         <img src="./assets/images/bgmid.svg" alt="SVG rBackground1" />
       </div>   
-      <div class="svg-rbackground2">
-        <img src="./assets/images/leftstar.svg" alt="SVG rBackground2" />
-      </div>   
+     
     </section>
 
   <!--===================
