update new mascot

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             >
               <img
                 class="robot"
-                src="./assets/images/mascot24.svg"
+                src="./assets/images/Hackathonmascot2.png"
                 alt="Floating Robot"
               />
               <div class="robot-shadow shadow "></div>
