--- a/index.html
+++ b/index.html
@@ -508,9 +508,38 @@
             </div>
           </div> -->
 
-        </div>
+        </div>        
       </div>
     </section>
+     <!--=================== 
+        Judge&Mentor Section 
+        =================== -->
+    <section class="judge_mentor">
+    <h2 class="judge-title">OUR JUDGES & MENTORS</h2>      
+        <div class="judges">
+            <div class="judge">
+                <img src="./assets/images/profilepic.svg" class="judge-profile" alt="Judge">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <h3 class="judge-name">JUDGE NAME</h3>
+                <p>DESCRIPTION</p>
+            </div>
+            <div class="judge">
+                <img src="./assets/images/profilepic.svg" class="judge-profile" alt="Judge">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <h3 class="judge-name">JUDGE NAME</h3>
+                <p>DESCRIPTION</p>
+            </div>
+            <div class="judge">
+                <img src="./assets/images/profilepic.svg" class="judge-profile" alt="Judge">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <h3 class="judge-name">JUDGE NAME</h3>
+                <p>DESCRIPTION</p>
+            </div>
+            <div class="design-background">
+              <img src="./assets/images/judgeMentorDesign.svg" alt="Design Background" />
+            </div> 
+        </div>
+      </section>
 
     <!--=================== 
         COUNTDOWN Section 
