--- a/index.html
+++ b/index.html
@@ -515,7 +515,13 @@
         Judge&Mentor Section 
         =================== -->
     <section class="judge_mentor">
-    <h2 class="judge-title">OUR JUDGES & MENTORS</h2>      
+      <div class="col-md-8 col-sm-11 text-center mx-auto">
+        <div class="section-title mb-5">
+          <h2 class="fs-1 fw-bold text-light text-center">
+            OUR JUDGES & MENTORS
+          </h2>
+        </div>
+      </div>   
         <div class="judges">
             <div class="judge">
                 <img src="./assets/images/profilepic.svg" class="judge-profile" alt="Judge">
