--- a/login.html
+++ b/login.html
@@ -20,15 +20,15 @@
 <body>
     <div class="outer-container selectDisable">
         
-        <a href="" class="umh-web-link">
-            <img class="umh-logo" src="./assets/images/umh-logo2025-white-cropped.png" alt="UMH logo" height="10"/>
+        <a href="index.html" class="umh-web-link" draggable="false">
+            <img class="umh-logo" src="./assets/images/umh-logo2025-white-cropped.png" alt="UMH logo" height="10" draggable="false"/>
         </a>
         
-        <div class="login-form login-form1">
-            <div class="login-form-img"></div>
-        </div>
-        <div class="login-form login-form2">
-            <div class="form-box">
+        <div class="login-form">
+            <div class="login-form login-form-background">
+                <div class="login-form-background-img"></div>
+            </div>
+            <form class="form-box">
                 <h1 class="form-item form-title">Get Started</h1>
                 <div class="input-box">
                     <img class="login-icon alias-icon form-item" src="./assets/images/login-alias-icon.png" alt="" draggable="false"/>
@@ -39,7 +39,7 @@
                     <input class="pswd-input login-input form-item" type="password" placeholder="Password"/>
                 </div>
                 <button class="login-btn form-item" type="submit">Log in</button>
-            </div>
+            </form>
         </div>
 
     </div>
