--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
         Judge&Mentor Section 
         =================== -->
     <section id="judge&mentor" class="judge_mentor">
+      <div container>
       <div class="col-md-8 col-sm-11 text-center mx-auto">
         <div class="section-title mb-5">
           <h2 class="fs-1 fw-bold text-light text-center">
@@ -548,6 +549,7 @@
               <img src="./assets/images/judgeMentorDesign.svg" alt="Design Background" />
             </div> 
         </div>
+      </div>
       </section>
 
     <!--=================== 
