add uncompleted submit page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
           </li>
           <li class="nav-item">
             <a href="login.html" class="nav-link">Login</a>
+          <li class="nav-item">
+            <a href="submit.html" class="nav-link">Submission</a>
         </li>
         </ul>
       </div>
