new update submission page

--- a/submit.html
+++ b/submit.html
@@ -31,7 +31,7 @@
                     <input class="group-name-input submit-input form-item-submit" type="text"/>
                 </div>
                 <div class="input-box-submit">
-                    <label for="group-name" class="form-label">Gdrive Link</label>
+                    <label for="file-upload" class="form-label">Gdrive Link</label>
                     <input class="link-input submit-input form-item-submit" type="url"/>
                 </div>
                 <button class="submit-btn form-item-submit" type="submit">Submit</button>
