--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <a href="#faq" class="nav-link">FAQ</a>
         </li>
         <!-- Placeholder for login/logout -->
-        <li class="nav-item d-none" id="logged-out">
+        <li class="nav-item" id="logged-out">
           <a href="login.html" class="nav-link">Login</a>
-          <li class="nav-item">
+          <li class="nav-item d-none">
             <a href="submit.html" class="nav-link">Submission</a>
         </li>
         <li class="nav-item d-none" id="logged-in">
