--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- Placeholder for login/logout -->
         <li class="nav-item" id="logged-out">
           <a href="login.html" class="nav-link">Login</a>
-          <li class="nav-item d-none">
+          <li class="nav-item d-none" id="logged-in-submission">
             <a href="submit.html" class="nav-link">Submission</a>
         </li>
         <li class="nav-item d-none" id="logged-in">
