create mentor section

--- a/index.html
+++ b/index.html
@@ -96,8 +96,11 @@
         HOMEPAGE Section 
         =================== -->        
     <section id="home">
-      <div class="container-xl container-lg container-fluid pt-lg-5 pt-md-5">
+      <img src="./assets/images/home_bottom_right.svg" class="home_bottom_right" alt="" />
+      <div class="container-xl container-lg container-fluid">
+        <!-- deleted  pt-lg-5 pt-md-5 -->
         <div class="row align-items-center py-5">
+          <!-- deleted  py-5 -->
           <div class="col-lg-6 col-md-6 col-sm-12 px-sm-4 px-4 d-flex flex-column tagline-container">
             <div class="tagline" data-aos-delay="1500" data-aos="fade-right" data-aos-once="true">
               <h1 class="gradient-background">A BIGGER</h1>
@@ -116,11 +119,12 @@
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12 text-end">
             <div
-              class="floating-robot pb-5 d-none d-sm-flex flex-column align-items-center gap-5"
+              class="floating-robot d-none d-sm-flex flex-column align-items-center gap-5"
               data-aos-delay="1500"
               data-aos="fade"
               data-aos-easing="ease-in-sine"
             >
+            <!-- deleted pb-5 -->
               <img
                 class="robot"
                 src="./assets/images/Hackathonmascot2.png"
@@ -553,6 +557,54 @@
             </div> 
         </div>
       </div>
+      </section>
+
+      <!--=================== 
+        MENTOR Section 
+        =================== -->
+      <section id="mentors">
+        <img src="./assets/images/mentor_background.svg" alt="Mentor Background" class="mentor-bg">
+        
+        <div class="container">
+          <div class="mentor-card left">
+            <div class="mentor-image-container">
+              <img src="./assets/images/mentor-placeholder.svg">
+              <img src="./assets/images/mentor_example.svg" class="mentor-overlay">
+            </div>
+            <div class="mentor-info-box left">
+              <div class="mentor-info">
+                <h3>MENTOR NAME</h3>
+                <p>DESCRIPTION</p>
+              </div>
+            </div>
+          </div>
+  
+          <div class="mentor-card right">
+            <div class="mentor-image-container">
+              <img src="./assets/images/mentor-placeholder.svg">
+              <img src="./assets/images/mentor_example.svg" class="mentor-overlay">
+            </div>
+            <div class="mentor-info-box right">
+              <div class="mentor-info">
+                <h3>MENTOR NAME</h3>
+                <p>DESCRIPTION</p>
+              </div>
+            </div>
+          </div>
+  
+          <div class="mentor-card left">
+            <div class="mentor-image-container">
+              <img src="./assets/images/mentor-placeholder.svg">
+              <img src="./assets/images/mentor_example.svg" class="mentor-overlay">
+            </div>
+            <div class="mentor-info-box left">
+              <div class="mentor-info">
+                <h3>MENTOR NAME</h3>
+                <p>DESCRIPTION</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
     <!--=================== 
