--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <span class="nav-link">Welcome, <span id="user-email"></span></span>
         </li>
         <li class="nav-item d-none" id="logout-btn">
-          <button class="btn nav-link" id="sign-out-button">Sign Out</button>
+          <button class="btn btn-outline-danger nav-link" id="sign-out-button">Sign Out</button>
         </li>
       </ul>
       </div>
