--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
         <li class="nav-item">
           <a href="#timeline" class="nav-link">Timeline</a>
         </li>
-          <li class="nav-item">
-            <a href="#judge&mentor" class="nav-link"> Judge & Mentor </a>
-          </li>
+        <!-- <li class="nav-item">
+            <a href="judge.html" class="nav-link"> Judges</a>
+        </li>
+        <li class="nav-item">
+          <a href="mentor.html" class="nav-link"> Mentors</a>
+        </li> -->
         <li class="nav-item">
           <a href="#faq" class="nav-link">FAQ</a>
         </li>
@@ -529,9 +532,9 @@
       </div>
     </section>
      <!--=================== 
-        Judge&Mentor Section 
+        JUDGE Section 
         =================== -->
-    <section id="judge&mentor" class="judge_mentor">
+    <!-- <section id="judge&mentor" class="judge_mentor">
       <div container>
       <div class="col-md-8 col-sm-11 text-center mx-auto">
         <div class="section-title mb-5">
@@ -564,12 +567,12 @@
             </div> 
         </div>
       </div>
-      </section>
+      </section> -->
 
       <!--=================== 
         MENTOR Section 
         =================== -->
-      <section id="mentors">
+      <!-- <section id="mentors">
         <img src="./assets/images/mentor_background.svg" alt="Mentor Background" class="mentor-bg">
         
         <div class="container">
@@ -612,7 +615,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
     <!--=================== 
         COUNTDOWN Section 
