--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <li class="nav-item">
           <a href="#timeline" class="nav-link">Timeline</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
             <a href="judge.html" class="nav-link"> Judges</a>
         </li>
         <li class="nav-item">
           <a href="mentor.html" class="nav-link"> Mentors</a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a href="#faq" class="nav-link">FAQ</a>
         </li>
