--- a/submit.html
+++ b/submit.html
@@ -40,6 +40,6 @@
 
     </div>
 
-    <script src="./assets/js/submit.js"></script>
+    <script type="module" src="./assets/js/submit.js"></script>
 </body>
 </html>
