--- a/login.html
+++ b/login.html
@@ -13,11 +13,9 @@
 </head>
 <body>
     <div class="outer-container selectDisable">
-        
         <a href="index.html" class="umh-web-link" draggable="false">
             <img class="umh-logo" src="./assets/images/umh-logo2025-white-cropped.png" alt="UMH logo" height="10" draggable="false"/>
         </a>
-        
         <div class="login-form">
             <div class="login-form login-form-background">
                 <div class="login-form-background-img"></div>
@@ -26,11 +24,12 @@
                 <h1 class="form-item form-title">Get Started</h1>
                 <div class="input-box">
                     <img class="login-icon alias-icon form-item" src="./assets/images/login-alias-icon.png" alt="" draggable="false"/>
-                    <input class="email-input login-input form-item" type="email" placeholder="Email address"/>
+                    <input id="emailInput" class="email-input login-input form-item" type="email" placeholder="Email address"/>
                 </div>
                 <div class="input-box">
                     <img class="login-icon key-icon form-item" src="./assets/images/login-key-icon.png" alt="" draggable="false"/>
-                    <input class="pswd-input login-input form-item" type="password" placeholder="Password"/>
+                    <input id="passwordInput" class="pswd-input login-input form-item" type="password" placeholder="Password"/>
+                    <i class="fas fa-eye-slash eye-icon" id="togglePassword"></i>
                 </div>
                 <button class="login-btn form-item" type="submit">Log in</button>
             </form>
