recap video and prizepool

--- a/index.html
+++ b/index.html
@@ -224,11 +224,12 @@
         </div>            
         <iframe class="text-center px-xl-5" 
                 width="100%" 
-                height="359" 
-                src="https://www.youtube.com/embed/zEsi570tJe0?controls=0&showinfo=0" 
+                height="486"
+                src="https://www.youtube.com/embed/wf4F2rSPubQ?si=xytM6-EsoFQyEtih" 
                 title="UMHackathon Recap" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
                 allowfullscreen>
         </iframe>
       </div>
@@ -272,21 +273,21 @@
 
         <div class="prizepool_section">
           <div class="prizepool section_title mt-5 text-center fs-1 fw-bold">PRIZE POOL</div>
-          <div class="prizepool section_subtitle">
+          <!-- <div class="prizepool section_subtitle">
             Up to <span>RM 20K</span> for all domains!
-          </div>
+          </div> -->
           <div class="prizepool_container" id="prizepool_container">
             <div class="prizepool_award second" id="gold">
               <img src="assets/images/2nd.svg" alt="" class="tier" />
-              <p class="amount_second">RM 4000</p>
+              <p class="amount_second">TBC</p>
             </div>
             <div class="prizepool_award first" id="diamond">
               <img src="assets/images/champ.svg" alt="" class="tier" />
-              <p class="amount_first">RM 7000</p>
+              <p class="amount_first">TBC</p>
             </div>
             <div class="prizepool_award third" id="silver">
               <img src="assets/images/3rd.svg" alt="" class="tier" />
-              <p class="amount_third">RM 2500</p>
+              <p class="amount_third">TBC</p>
             </div>
           </div>
         </div>
