--- a/index.html
+++ b/index.html
@@ -360,13 +360,13 @@
               <img src="assets\images\grab.png"/>
             </div>
             <div class="item itemRight item4">
-              <img src="assets\images\balaenaquant.png" />
+              <img src="assets\images\maxis.png" />
             </div>
             <div class="item itemRight item5">
-              <img src="assets\images\securitiescommission.jpeg"/>
+              <img src="assets\images\balaenaquant.png"/>
             </div>
             <div class="item itemRight item6">
-              <img src="assets\images\grab.png"/>
+              <img src="assets\images\securitiescommission.jpeg"/>
             </div>
           </div>
         
