--- a/index.html
+++ b/index.html
@@ -400,7 +400,28 @@
               <img src="assets\images\grab.png"/>
             </div>
           </div>
-        </section>
+        
+
+          <h3 class="sponsor-title benefit-in-kind-title">Benefit-in-Kind</h3>
+            <div class="wrapper">
+              <div class="item itemRight item1">
+                <img src="assets\images\vida.png" />
+              </div>
+              <div class="item itemRight item2">
+                <img src="assets\images\vida.png" />
+              </div>
+              <div class="item itemRight item3">
+                <img src="assets\images\vida.png" />
+              </div>
+              <div class="item itemRight item4">
+                <img src="assets\images\vida.png" />
+              </div>
+              <div class="item itemRight item5">
+                <img src="assets\images\vida.png" />
+              </div>
+            </div>
+
+          </section>
 
 
         
