--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="judge.html" class="nav-link"> Judges</a>
         </li>
         <li class="nav-item">
-          <a href="mentor.html" class="nav-link"> Mentors</a>
+          <a href="/mentors" class="nav-link"> Mentors</a>
         </li>
         <li class="nav-item">
           <a href="#faq" class="nav-link">FAQ</a>
