--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <a href="#timeline" class="nav-link">Timeline</a>
         </li>
         <li class="nav-item">
-            <a href="judge.html" class="nav-link"> Judges</a>
+            <a href="/judges" class="nav-link"> Judges</a>
         </li>
         <li class="nav-item">
           <a href="/mentors" class="nav-link"> Mentors</a>
@@ -86,9 +86,9 @@
         </li>
         <!-- Placeholder for login/logout -->
         <li class="nav-item" id="logged-out">
-          <a href="login.html" class="nav-link">Login</a>
+          <a href="/login" class="nav-link">Login</a>
           <li class="nav-item d-none" id="logged-in-submission">
-            <a href="submit.html" class="nav-link">Submission</a>
+            <a href="/submission" class="nav-link">Submission</a>
         </li>
         <li class="nav-item d-none" id="logged-in">
           <span class="nav-link">Welcome, <span id="user-email"></span></span>
