--- a/mentors.html
+++ b/mentors.html
@@ -49,10 +49,11 @@
                     <a href="index.html" class="nav-link"> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="judge.html" class="nav-link"> Judges</a>
+                    <a href="/judges" class="nav-link"> Judges</a>
                 </li>
                 <li class="nav-item">
-                    <a href="mentor.html" class="nav-link"> Mentors</a>
+                    <a href="/mentors" class="nav-link"> Mentors</a>
+                    <!-- changes -->
                 </li>
             </ul>
             </div>
