--- a/judges.html
+++ b/judges.html
@@ -46,13 +46,13 @@
             >
             <ul class="navbar-nav gap-3">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link"> Home</a>
+                    <a href="/index" class="nav-link"> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="judge.html" class="nav-link"> Judges</a>
+                    <a href="/judges" class="nav-link"> Judges</a>
                 </li>
               <li class="nav-item">
-                  <a href="mentor.html" class="nav-link"> Mentors</a>
+                  <a href="/mentors" class="nav-link"> Mentors</a>
               </li>
             </ul>
             </div>
