Fixed homepage URL redirection

--- a/judges.html
+++ b/judges.html
@@ -46,7 +46,7 @@
             >
             <ul class="navbar-nav gap-3">
                 <li class="nav-item">
-                    <a href="/index" class="nav-link"> Home</a>
+                    <a href="./" class="nav-link"> Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="/judges" class="nav-link"> Judges</a>
