Fixed homepage URL redirection

--- a/judges.html
+++ b/judges.html
@@ -24,7 +24,7 @@
     <section class="container">
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-black p-0">
           <div class="container-fluid">
-            <a href="#home" class="navbar-brand">
+            <a href="./" class="navbar-brand">
               <img id="navigation-logo" src="./assets/images/umh-logo2025-white-cropped.png" height="10"/>
             </a>
             <!-- toggle button for  small screen size -->
