--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="outer-container selectDisable">
-        <a href="index.html" class="umh-web-link" draggable="false">
+        <a href="./" class="umh-web-link" draggable="false">
             <img class="umh-logo" src="./assets/images/umh-logo2025-white-cropped.png" alt="UMH logo" height="10" draggable="false"/>
         </a>
         <div class="login-form">
