--- a/mentors.html
+++ b/mentors.html
@@ -24,7 +24,7 @@
     <section class="container">
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-black p-0">
           <div class="container-fluid">
-            <a href="#home" class="navbar-brand">
+            <a href="./" class="navbar-brand">
               <img id="navigation-logo" src="./assets/images/umh-logo2025-white-cropped.png" height="10"/>
             </a>
             <!-- toggle button for  small screen size -->
@@ -46,7 +46,7 @@
             >
             <ul class="navbar-nav gap-3">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link"> Home</a>
+                    <a href="./" class="nav-link"> Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="/judges" class="nav-link"> Judges</a>
