--- a/submission.html
+++ b/submission.html
@@ -20,7 +20,7 @@
 <body>
     <div class="outer-container-submit selectDisable">
         
-        <a href="index.html" class="umh-web-link">
+        <a href="./" class="umh-web-link">
             <img class="umh-logo-submit" src="./assets/images/umh-logo2025-white-cropped.png" alt="UMH logo" height="10"/>
         </a>
         <div class="submit-form submit-form2">
