add etiqa platinum sponsor

--- a/index.html
+++ b/index.html
@@ -339,14 +339,24 @@
             <h2 class="section_title">HOSTS AND PARTNERS</h2>
           </div>
         
-          <!-- <h3 class="sponsor-title diamond-title">Diamond Sponsors</h3>
+          <h3 class="sponsor-title diamond-title">Diamond Sponsors</h3>
           <div class="wrapper">
-            <div class="item itemLeft item1"></div>
-            <div class="item itemLeft item2"></div>
-            <div class="item itemLeft item3"></div>
-            <div class="item itemLeft item4"></div>
-            <div class="item itemLeft item5"></div>
-          </div> -->
+            <div class="item itemLeft item1">
+              <img src="assets\images\Etiqa.png" />
+            </div>
+            <div class="item itemLeft item2">
+              <img src="assets\images\Etiqa.png" />
+            </div>
+            <div class="item itemLeft item3">
+              <img src="assets\images\Etiqa.png" />
+            </div>
+            <div class="item itemLeft item4">
+              <img src="assets\images\Etiqa.png" />
+            </div>
+            <div class="item itemLeft item5">
+              <img src="assets\images\Etiqa.png" />
+            </div>
+          </div>
         
           <h3 class="sponsor-title platinum-title">Platinum Sponsors</h3>
           <div class="wrapper">
@@ -404,19 +414,19 @@
 
           <h3 class="sponsor-title benefit-in-kind-title">Benefit-in-Kind</h3>
             <div class="wrapper">
-              <div class="item itemRight item1">
+              <div class="item itemLeft item1">
                 <img src="assets\images\vida.png" />
               </div>
-              <div class="item itemRight item2">
+              <div class="item itemLeft item2">
                 <img src="assets\images\vida.png" />
               </div>
-              <div class="item itemRight item3">
+              <div class="item itemLeft item3">
                 <img src="assets\images\vida.png" />
               </div>
-              <div class="item itemRight item4">
+              <div class="item itemLeft item4">
                 <img src="assets\images\vida.png" />
               </div>
-              <div class="item itemRight item5">
+              <div class="item itemLeft item5">
                 <img src="assets\images\vida.png" />
               </div>
             </div>
