--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
      <!--=================== 
         JUDGE Section 
         =================== -->
-    <!-- <section id="judge&mentor" class="judge_mentor">
+    <section id="judge&mentor" class="judge_mentor">
       <div container>
       <div class="col-md-8 col-sm-11 text-center mx-auto">
         <div class="section-title mb-5">
@@ -636,7 +636,7 @@
             </div> 
         </div>
       </div>
-      </section> -->
+      </section>
 
       <!--=================== 
         MENTOR Section 
