--- a/mentors.html
+++ b/mentors.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <div class="background"></div> 
     <section class="container">
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-black p-0">
           <div class="container-fluid">
@@ -70,28 +71,38 @@
           </h2>
         </div>
       </div>
-        <div class="judges">
-            <div class="judge">
-                <img src="./assets/images/profile.png" class="judge-background" alt="Mentor">
-            </div>
-            <div class="judge">
-                <img src="./assets/images/profile.png" class="judge-background" alt="Mentor">
-            </div>
-            <div class="judge">
-                <img src="./assets/images/profile.png" class="judge-background" alt="Mentor">
-            </div>
-            <div class="star">
-                <img src="./assets/images/jm-star.png" alt="Star">
-            </div>
-            <div class="design-background">
-                <img src="./assets/images/judgeMentorDesign.svg" alt="Design Background" />
-            </div>
+      <div class="judges">
+        <div class="judge">
+          <div class="judge-image">
+              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+              <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+          </div>
+          <div class="judge-info">
+              <h3 class="judge-name">Liana Ling</h3>
+              <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
+          </div>
+        </div>      
+        <div class="judge">
+          <div class="judge-image">
+              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+              <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
+          </div>
+          <div class="judge-info">
+              <h3 class="judge-name">Marcus Lee</h3>
+              <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
+          </div>
         </div>
-        <div class="coming-soon-container">
-            <h2 class="coming-soon-text">COMING SOON</h2>
-            <hr class="divider">
-            <p class="description">Find out our team of mentors soon. Stay tuned!</p>
+        <div class="judge">
+          <div class="judge-image">
+              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+              <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+          </div>
+          <div class="judge-info">
+              <h3 class="judge-name">Ng Jun Han</h3>
+              <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
+          </div>
         </div>
+      </div>
       </div>
       </section>
 
